@@ -56,7 +56,7 @@ gwen {
       ]
       parallel = false
       parallelFeatures = false
-      report = "target/reports"
+      report = ${gwen.output.dir}/reports
       tags = [
         # "@tag1",
         # "~@tag2",
@@ -74,6 +74,9 @@ gwen {
   }
   mask {
     char = "●"
+  }
+  output {
+    dir = "target"
   }
   parallel {
     maxThreads = 0                # 0 = use all available cores
