@@ -42,6 +42,7 @@ class GwenSettingsTest extends BaseTest with Matchers {
       GwenSettings.`gwen.feature.failfast.exit` should be (false)
       GwenSettings.`gwen.feature.mode` should be (FeatureMode.imperative)
       GwenSettings.`gwen.mask.char` should be ('●')
+      GwenSettings.`gwen.output.dir`.getPath should be ("target")
       GwenSettings.`gwen.parallel.maxThreads` should be (GwenSettings.availableProcessors)
       GwenSettings.`gwen.rampup.interval.seconds` should be (None)
       GwenSettings.`gwen.report.overwrite` should be (false)
